fix header z-index issue on homepage

--- a/templates/synathina/sass/_config.scss
+++ b/templates/synathina/sass/_config.scss
@@ -57,7 +57,6 @@ $navBorderColor: #bdbdbd;
 //
 //##
 
-$zindex-navbar:            1000;
 $zindex-dropdown:          1000;
 $zindex-popover:           1060;
 $zindex-tooltip:           1070;
@@ -68,3 +67,4 @@ $zindex-modal:             1050;
 $zindex-mobile-menu:       1060;
 $zindex-critical-message:  1070;
 $zIndex-homepage-featured: 1080;
+$zindex-navbar:            1090;
